--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,36 @@
 .Weather {
   border: 1px solid #dadde1;
+  padding: 16px;
+  margin: 30px 0 0 0;
+  max-width: 600px;
+}
+
+.Weather h1 {
+  color: rgb(28, 20, 85);
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+
+.Weather li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: rgb(72, 72, 74);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
+
+.Weather .temperature {
+  font-weight: bold;
+  color: rgb(28, 20, 85);
+  font-size: 64px;
 }
