--- a/src/Weather.css
+++ b/src/Weather.css
@@ -30,7 +30,22 @@
 }
 
 .Weather .temperature {
-  font-weight: bold;
   color: rgb(28, 20, 85);
   font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+  display: inline-block;
+}
+
+.Weather img {
+  height: 64px;
+  width: 64px;
+
+  display: inline-block;
+}
+
+.Weather .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
 }
