--- a/src/Weather.css
+++ b/src/Weather.css
@@ -37,11 +37,10 @@
   display: inline-block;
 }
 
-.Weather img {
-  height: 64px;
-  width: 64px;
-
+.Weather canvas {
   display: inline-block;
+  margin-top: 5px;
+  margin-right: 5px;
 }
 
 .Weather .units {
