--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 .App {
   max-width: 600px;
-  margin: 30px auto;
+  margin: 100px auto;
 }
 
 .App footer {
-  font-size: 11px;
+  font-size: 10px;
   margin: 10px 0;
+  text-align: center;
+}
+
+.App a {
+  text-decoration: none;
 }
