--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,14 +1,15 @@
 .Weather {
-  border: 1px solid #dadde1;
+  border: 0.5px solid #e8ebee;
   padding: 16px;
   margin: 30px 0 0 0;
   max-width: 600px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .Weather h1 {
   color: rgb(28, 20, 85);
-  font-size: 24px;
-  font-weight: 100;
+  font-size: 35px;
+  font-weight: 300;
   line-height: 28px;
   margin-bottom: 0;
   padding-bottom: 10px;
